1. osascript executes asynchronously 2. invoke piped commands by throwing it to a shell program